# Google_Chrome_Memory_Manager

./: .gitignore  LICENSE  Makefile  README.md
grafana/: server.py  template.json
kernel_module/: Makefile  get_mem.c
memory_management_for_chrome/: .gitignore  Cargo.toml  log.json  manager.toml
memory_management_for_chrome/src/: config_manager.rs  main.rs  memory_manager.rs  server_manager.rs  tab_manager.rs
tab_info_server/: server.py
tab_infos/: background.js  manifest.json
