[package]
name = "memory_management_for_chrome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.5"
json = "0.12.4"
nix = { version = "0.29.0", features = ["signal"] }
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
toml = "0.8.19"
